Fix alignment over missing featured img on pages

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -736,9 +736,10 @@ make sure this only happens on large viewports / desktop-ish devices.
 }
 
 .post-full-image {
-  margin: 0 -10vw -165px;
-  background: $lightgrey center center;
+  background: transparent center center;
   border-radius: 5px;
+  margin: 0 -10vw -165px;
+  min-height: 165px;
   overflow: hidden;
 }
 
